# LibraryAPI

./: .gitignore  Dockerfile  README.md  docker-compose.yml  make-migrations.yml  pyproject.toml  tests.yml
.github/workflows/: libraryapi_CI.yml
alembic/: env.py
alembic/versions/: 1840a6a81014_.py  71e52dedec68_.py  81b1df78b9a1_.py  a2089ba92e99_.py  b36676e2ddca_.py  dd645ea59b7a_.py
src/LibraryAPI/books/: router.py
src/LibraryAPI/main/: api.py
src/libraryapi/: dependencies.py
src/libraryapi/books/: crud.py  dependencies.py  models.py  router.py  schema.py  service.py
src/libraryapi/main/: api.py  common.py  config.py
src/libraryapi/users/: crud.py  dependencies.py  models.py  router.py  schema.py  security.py  service.py
tests/: conftest.py
tests/integration/: test_books.py  test_users.py
