[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.mypy]
strict = true
warn_unused_configs = true
check_untyped_defs = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 120

[project]
name = "libraryapi"
version = "0.0.1"
authors = [
    { name = "Sequew", email = "kryseyt@gmail.com" },
]
description = "API for online library"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "adaptix",
    "gunicorn",
    "uvicorn",
    "sqlalchemy",
    "alembic",
    "psycopg2-binary"
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx"
]
lint = [
    "ruff"
]
types-checking = [
    "mypy"
]
dev = [
    "LibraryAPI[test, lint, types-checking]"
]

[project.urls]
"Homepage" = "https://github.com/KrySeyt/LibraryAPI"
